LightNovel CRUD update